<resources>
<string name="ApplicationLabel">Control Consumo de Materiales</string>
<string name="ApplicationName">Control Consumo de Materiales</string>
<string name="Cancel">Cancelar</string>
<string name="Accept">Aceptar</string>
<string name="Yes">Si</string>
<string name="No">No</string>
<string name="Back">Volver Atrás</string>
<string name="ScreenOutServices"></string>
<string name="ScreenEquipments">Planificación</string>
<string name="ScreenConfigurations">Configuración de la Tableta</string>
<string name="ScreenMaterialIN">Consumo de Materiales</string>
<string name="ScreenMaterialOut">Salida de Materiales</string>
<string name="NoEquipment">No Equipo</string>
<string name="Turn">Turno</string>
<string name="Autorize">Autorizar</string>
<string name="Ajust">Ajustar</string>
<string name="Print">Imprimir</string>
<string name="Continue">Continuar</string>
<string name="synchronizing">Sincronizando…</string>
<string name="sync_permits">Sincronizando Permisos</string>
<string name="NoConection">Hay un problema de conexión con el servidor</string>
<string name="ButtonAcceptText">Entrar</string>
<string name="EditUserNameHint">Cod. Empleado</string>
<string name="EditUserNameFullHint">Nombre de Usuario</string>
<string name="EditPasswordHint">Escriba la contraseña</string>
<string name="FeedBackLogin">Validando...</string>
<string name="FeedBackWrong">Usuario o Contraseña Incorrecta</string>
<string name="FeedBackWrongCode">Código empleado incorrecto</string>
<string name="FeedBackLock">Código empleado se encuentra bloqueado.</string>
<string name="FeedBackExpired">Código empleado se acceso ha expirado.</string>
<string name="open_mode">Drawer Abierto</string>
<string name="closed_mode">Drawer Cerrado</string>
<string name="DrawerOperacions">Consumo/Salida</string>
<string name="DrawerPlan">Planificación/Cambio</string>
<string name="DrawerChange">Asignación de BOM</string>
<string name="DrawerRelease">Vaciar Bandejas</string>
<string name="DrawerConfig">Configuraciones</string>
<string name="DrawerReturn">Devolución Consumo</string>
<string name="DrawerReturnProduct">Ajuste Salida Prod.</string>
<string name="DrawerReport">Reporte Varillas</string>
<string name="DrawerReceipt">Inventario Equipo</string>
<string name="DrawerQuality">SPC / Calidad</string>
<string name="DrawerClose">Inventario Final Turno</string>
<string name="DrawerTrayUpdate">Actualizar Bandejas</string>
<string name="DrawerReports">Reportes Generales</string>
<string name="DrawerQuit">Salir</string>
<string name="DrawerChangeErrorMessage">Debe asociar el computador a un equipo de producción.</string>
<string name="DrawerChangeErrorMessageNoAvailable">Opción no disponible en este computador.</string>
<string name="DrawerChangeErrorNoconfig">No existe ninguna BOM asignada en el equipo.</string>
<string name="MessageBandejasValidacion">Validando estatus de bandeja</string>
<string name="UpdatingBandejaSql">Actualizando bandeja</string>
<string name="no_data">No hay datos a Mostrar</string>
<string name="ChangeDate">Cambiar Fecha</string>
<string name="ChangeTime">Cambiar Hora</string>
<string name="Select">Seleccione</string>
<string name="Select_prompt_subEquipment">Seleccione el Sub Equipo</string>
<string name="UnSelect_prompt_subEquipment">No Sub Equipo</string>
<string name="Select_prompt_area">Seleccione el área</string>
<string name="UnSelect_prompt_area">No Área</string>
<string name="action_equipment">Equipos</string>
<string name="action_seatch">Buscar</string>
<string name="action_search_for">Buscando :</string>
<string name="update_config">Cambios realizados correctamente</string>
<string name="dialog_new_config">¿Desea crear una configuración nueva en el equipo {0} ?</string>
<string name="dialog_new_config_planchar">Existen planificaciones programadas en el pasado que no fueron ejecutadas se van a Inhabilitar para agregar configuraciones nuevas en el equipo</string>
<string name="dialog_new_config_no_old">No puede crear una planificación con fecha y hora anterior a la actual</string>
<string name="dialog_new_config_no_new">Esta planificación ya ha sido creada anteriormente.</string>
<string name="menu_selected">Seleccionado</string>
<string name="menu_Deleted">Inhabilitar</string>
<string name="menu_Edit">Editar</string>
<string name="menu_Save">Guardar</string>
<string name="menu_Update">Actualizar</string>
<string name="menu_Restart">Reiniciar</string>
<string name="menu_User">Usuarios</string>
<string name="menu_print">Reimpresión</string>
<string name="menu_peso">Peso</string>
<string name="menu_diametro">Diámetro</string>
<string name="menu_tiro">Tiro</string>
<string name="NoConfigEquipment">Este computador no esta asociado a un equipo de producción.</string>
<string name="NoConfigConfiguration">No existen planificación de producto para este computador.</string>
<string name="EquipmentAssign">Asignado Actualmente:</string>
<string name="EquipmentAssignSub">Sub Equipo:</string>
<string name="EquipmentPlanification">Planificación Automática:</string>
<string name="EquipmentAssignHit">No asignado</string>
<string name="EquipmentScanHit">Lea Equipo o Área</string>
<string name="EquipmentPrinter">Impresora:</string>
<string name="EquipmentPrinterFind">Buscar</string>
<string name="EquipmentPrinterCopies">Copias</string>
<string name="EquipmentPrinterTitle">Buscando Dispositivos</string>
<string name="EquipmentPrinterFound">Se encontraron {0} dispositivos</string>
<string name="EquipmentupdateError">Error de comunicación con el servidor.</string>
<string name="EquipmentTitleUser">Mantenimiento de Usuarios.</string>
<string name="EquipmentReadUserCode">Lea el código del Usuario.</string>
<string name="InputOutputControl">Control de entradas y salidas:</string>
<string name="Change">Asignación de BOM</string>
<string name="ChangePlanificado">Producto Planificado:</string>
<string name="ChangeFecha">Fecha / Hora:</string>
<string name="ChangeEquipment">Leer No. Equipo:</string>
<string name="ChangeProducto">Leer BOM a asignar:</string>
<string name="ChangeProductoNoNext">Este producto no es el próximo programado</string>
<string name="ChangeProductoWrong">BOM Incorrecta</string>
<string name="ChangeProductoSoon">\"Aviso\"\n{0} planificado para {1} a las {2}. desea activarlo?</string>
<string name="ChangeProductoWorking">Este producto ya esta programado actualmente</string>
<string name="ChangeProductoWrongEquipment">Equipo escaneado incorrecto</string>
<string name="ChangeProductoStoreDry">Regular(X).</string>
<string name="ChangeProductoStoreCold">Frio(S).</string>
<string name="ChangeProductoStoreTitle">Seleccione el tipo de almacenamiento.</string>
<string name="ChooseProducto">Producto :</string>
<string name="ChooseEntrada">Consumo Materiales</string>
<string name="ChooseSalida">Salida de Producto</string>
<string name="ChooseDesperdicio">Desperdicios</string>
<string name="ChooseConsultas">Consultas</string>
<string name="Entry">Consumo Material</string>
<string name="EntryBarCode">Código de Barra:</string>
<string name="EntryBarCodeHit">Lea Código de Barra </string>
<string name="EntryMaterial">Material:</string>
<string name="EntryMaterialCodeHit">Código</string>
<string name="EntryMaterialDescHit">Descripción</string>
<string name="EntryMaterialQuantHit">Cantidad</string>
<string name="EntryMaterialUnitHit">Unidad</string>
<string name="EntryMaterialSecuenHit"># Caja / Sec</string>
<string name="EntryLote">Lote Suplidor:</string>
<string name="EntryLoteSap">Lote Int.:</string>
<string name="EntryMaterialNoAvailable">\"Material no disponible en inventario de la máquina.\"\nMaterial:{0} - Lote Interno:{1} - Cant. en Inv:{2}</string>
<string name="EntryMaterialNoStock">\"Material no está disponible en el inventario de la máquina.\"\nMaterial:{0} - Lote Interno:{1}.</string>
<string name="EntryMaterialNoStockBox">\"Material no está disponible en el inventario de la máquina.\"\nMaterial:{0} - Lote Interno:{1} - No. Caja/Sec: {2}.</string>
<string name="EntryMaterialAlreadyRead">Material:{0} - Lote Interno:{1} - No. Caja/Sec:{2}\nConsumido en Equipo:{3} en Fecha:{4} - Hora:{5}</string>
<string name="EntryMaterialAlreadyReturn">\"Material ya fe devuelto a buffer.\"\nMaterial:{0} - Lote Interno:{1} - No. Caja/Sec:{2}.</string>
<string name="ButtonClean">Limpiar</string>
<string name="ButtonCancel">Cancelar</string>
<string name="MessageGoodEntry">\"Material Correcto\"\nPuede proceder a introducir el material al equipo.</string>
<string name="MessageWrongEntry">\"Material Incorrecto\"\nMaterial:{0} no está incluido en BOM del Producto:{1}</string>
<string name="MessageExpiredEntry">\"Material Vencido\"\nMaterial:{0} - Lote Supl:{1} - Fecha Vencimiento:{2}.</string>
<string name="MessageBoxValueEntry">Debe insertar el numero de la caja / sec.</string>
<string name="MessageWrongEntryNoExist">Código Leído no es un Material.</string>
<string name="MessageWrongEntryNoBatchExist">Este lote no existe en este centro</string>
<string name="MessageWrongEntryNoBatchExistSecuence">Etiqueta de suplidor invalida.</string>
<string name="MessageExistBoxNumber">Caja / Sec {0} ya fue registrada.</string>
<string name="MessageEmptyTray">Bandeja sin Producto.</string>
<string name="Out">Salida de Producto</string>
<string name="OutBarCode">Código:</string>
<string name="OutBarCode2">Cantidad:</string>
<string name="OutBarSecuenceWrond">Código Bandeja Incorrecta.</string>
<string name="OutBarCodeWrong">Producto Incorrecto.</string>
<string name="OutBarCodeValue">Cantidad:</string>
<string name="OutBarCodeValue2">Cantidad Cajas:</string>
<string name="OutBarCodeTotal">Total Cigarritos:</string>
<string name="OutGoodTray">Lectura de Producto Correcto.</string>
<string name="OutGoodTray2">Cantidad registrada: {0} {1}\nFavor Confirmar para imprimir la etiqueta.</string>
<string name="OutWrongTray">Bandeja {0} llena con Producto: {1}, de la Máquina:{2}, Fecha:{3}, Hora:{4}.</string>
<string name="OutBarCodeHit">Digite la Cantidad en "{0}: "</string>
<string name="OutBarCodeDialogLot">Seleccione el lote para producir.</string>
<string name="OutBarCodeDialogLotPrint">Etiquetas enviadas a imprimir.</string>
<string name="OutBarCodeDialogNoMaterial">No ha insertado ningún material.</string>
<string name="OutBarCodeDialogNoQuantity">Cantidad *{0}* registrada incorrecta.</string>
<string name="OutEntryPrintTitle">Seleccione la salida a Imprimir.</string>
<string name="OutReturnProduct">Devolución de Producto Correcto.</string>
<string name="OutNoGoodBox">No puede despachar en la unidad de medida: {0}.</string>
<string name="OutNoGoodBox2">No puede despachar en bandejas.</string>
<string name="OutNoGoodBoxBack">No se han encontrado salidas para Reversar.</string>
<string name="EntryBoxNo">Digite el No. de Caja / Sec</string>
<string name="EntryPesoNo">Digite el Peso(gr)</string>
<string name="EntryBoxQuantity">Digite la cantidad en {0}.</string>
<string name="EntryBoxNoWrong">* No Ha digitado el No. de Caja / Sec</string>
<string name="EntryPesoNoWrong">* No ha digitado el Peso</string>
<string name="EntryQuantityWrong">* No ha digitado la cantidad</string>
<string name="ReleaseEntryTitle">Turno {0}\nVaciar Bandeja - {1}</string>
<string name="ReleaseEntryMessage">Lea el No. de Bandeja</string>
<string name="ReleaseEntryFinished">Bandejas Vacías Correctamente</string>
<string name="ReleaseEntryWrong">Lea el No. de Bandeja</string>
<string name="ReleaseEntryAlreadyRelease">Lea el No. de Bandeja</string>
<string name="ReleaseMessageAlreadyRelease">La bandeja *{0}* ya esta Vacía</string>
<string name="ReleaseEntryTotal">Total Bandejas</string>
<string name="AlertChangeTurn">Tiene un cambio programado en {0} minutos del material {1}.</string>
<string name="AlertChangeTurnNow">Tiene un cambio programado en este momento del material {0}.</string>
<string name="AlertChangeTurnDialog">Debe realizar el cambio de turno en {0} minutos.</string>
<string name="AlertChangeTurnChangeDialog">Cambio de Turno.</string>
</resources>