<LinearLayout android:orientation="vertical" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"><TextView android:textSize="@dimen/dp_20" android:text="@string/Entry" android:gravity="center" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:gravity="right" android:layout_weight=".2" android:textSize="@dimen/dp_15" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/EntryBarCode" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" /><EditText android:layout_margin="@dimen/dp_3" android:layout_weight=".6" android:inputType="text" android:imeOptions="actionGo" android:maxLines="1" android:hint="@string/EntryBarCodeHit" android:textSize="@dimen/dp_15" android:background="@drawable/bg_input_white" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:id="@+id/editScanEntrada" /><LinearLayout android:layout_weight=".2" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:gravity="right" android:layout_weight=".2" android:textSize="@dimen/dp_15" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/EntryMaterial" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" /><TextView android:layout_margin="@dimen/dp_3" android:layout_weight=".14" android:singleLine="true" android:hint="@string/EntryMaterialCodeHit" android:textSize="@dimen/dp_15" android:background="@drawable/bg_input_disabled" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:id="@+id/txtCodeEntrada" /><TextView android:singleLine="true" android:layout_weight=".46" android:hint="@string/EntryMaterialDescHit" android:textSize="@dimen/dp_15" android:background="@drawable/bg_input_disabled" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:id="@+id/txtViewDescripcionEntrada" android:layout_margin="@dimen/dp_3" /><TextView android:layout_weight=".2" android:hint="@string/EntryMaterialQuantHit" android:textSize="@dimen/dp_15" android:background="@drawable/bg_input_disabled" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:layout_margin="@dimen/dp_3" android:id="@+id/txtViewCantidadEntrada" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:gravity="right" android:layout_weight=".2" android:textSize="@dimen/dp_15" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/EntryLote" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" /><TextView android:layout_margin="@dimen/dp_3" android:layout_weight=".25" android:textSize="@dimen/dp_15" android:background="@drawable/bg_input_disabled" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:id="@+id/txtViewBatch" /><TextView android:gravity="right" android:layout_weight=".1" android:textSize="@dimen/dp_15" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/EntryLoteSap" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" /><TextView android:layout_margin="@dimen/dp_3" android:layout_weight=".25" android:textSize="@dimen/dp_15" android:background="@drawable/bg_input_disabled" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:id="@+id/txtViewBatchSap" /><LinearLayout android:layout_weight=".2" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /></LinearLayout><LinearLayout android:layout_marginTop="@dimen/dp_5" android:orientation="horizontal" android:gravity="center" android:layout_width="match_parent" android:layout_height="@dimen/dp_30"><LinearLayout android:layout_weight=".4" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><Button android:layout_weight=".2" android:textSize="@dimen/dp_15" android:textColor="@android:color/white" android:background="@drawable/selector_button_orange" android:text="@string/Back" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/btnCancelEntrada" /><LinearLayout android:layout_weight=".4" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /></LinearLayout></LinearLayout>