<LinearLayout android:layout_marginTop="@dimen/dp_130" android:layout_height="@dimen/dp_200" android:layout_width="fill_parent" android:id="@+id/custom_dialog_first_rl" android:orientation="vertical" android:gravity="center" xmlns:android="http://schemas.android.com/apk/res/android"><TextView android:layout_weight=".5" android:gravity="center" android:textColor="@color/black_d1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="match_parent" android:layout_height="@dimen/dp_0" android:id="@+id/txtShowMessages" android:textSize="@dimen/dp_40" /><ViewFlipper android:id="@+id/flipper_view_message" android:layout_height="@dimen/dp_0" android:layout_weight=".5" android:layout_marginBottom="@dimen/dp_10" android:layout_width="fill_parent"><LinearLayout android:orientation="horizontal" android:layout_height="@dimen/dp_75" android:layout_width="match_parent"><LinearLayout android:layout_weight=".4" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><Button android:focusable="false" android:textSize="@dimen/dp_35" android:textColor="@android:color/white" android:layout_weight=".20" android:background="@drawable/selector_button_orange" android:text="@string/Accept" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/btnAceptDialog1" /><LinearLayout android:layout_weight=".4" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /></LinearLayout><LinearLayout android:layout_height="match_parent" android:orientation="horizontal" android:gravity="center" android:layout_width="match_parent"><LinearLayout android:layout_height="@dimen/dp_75" android:orientation="horizontal" android:layout_width="match_parent"><LinearLayout android:layout_weight=".25" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><Button android:focusable="false" android:textSize="@dimen/dp_35" android:textColor="@android:color/white" android:layout_weight=".20" android:background="@drawable/selector_button_orange" android:text="@string/Accept" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/btnAceptDialog3" /><LinearLayout android:layout_weight=".1" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><Button android:focusable="false" android:textSize="@dimen/dp_35" android:textColor="@android:color/white" android:layout_weight=".20" android:background="@drawable/selector_button_orange" android:text="@string/ButtonCancel" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/btnCancelDialog2" /><LinearLayout android:layout_weight=".25" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /></LinearLayout></LinearLayout><LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent"><LinearLayout android:layout_marginBottom="@dimen/dp_10" android:orientation="horizontal" android:layout_height="@dimen/dp_0" android:layout_weight=".5" android:layout_width="match_parent"><TextView android:id="@+id/txtViewBoxMessage" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight=".4" android:gravity="right" android:textSize="@dimen/dp_35" android:text="@string/OutBarCode" android:textColor="@color/black_d1" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><EditText android:inputType="numberDecimal" android:imeOptions="actionGo" android:layout_weight=".2" android:textSize="@dimen/dp_25" android:background="@drawable/bg_input_white" android:textColor="@color/black_d1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/editBoxNo" /><TextView android:layout_weight=".4" android:visibility="invisible" android:gravity="left" android:textSize="@dimen/dp_35" android:textColor="@color/red_light" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/txtShowMessagesBox" /></LinearLayout><LinearLayout android:layout_height="@dimen/dp_0" android:layout_weight=".5" android:orientation="horizontal" android:layout_width="match_parent"><LinearLayout android:layout_weight=".25" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><Button android:focusable="false" android:textSize="@dimen/dp_35" android:textColor="@android:color/white" android:layout_weight=".20" android:background="@drawable/selector_button_orange" android:text="@string/Accept" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/btnAceptDialog2" /><LinearLayout android:layout_weight=".1" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /><Button android:focusable="false" android:textSize="@dimen/dp_35" android:textColor="@android:color/white" android:layout_weight=".20" android:background="@drawable/selector_button_orange" android:text="@string/ButtonCancel" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" android:id="@+id/btnCancelDialog" /><LinearLayout android:layout_weight=".25" android:layout_width="@dimen/dp_0" android:layout_height="match_parent" /></LinearLayout></LinearLayout><LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:gravity="right" android:layout_weight=".2" android:textSize="@dimen/dp_30" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/EntryBarCode" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" /><EditText android:inputType="text" android:imeOptions="actionGo" android:maxLines="1" android:layout_margin="@dimen/dp_5" android:layout_weight=".6" android:hint="@string/EntryBarCodeHit" android:textSize="@dimen/dp_30" android:background="@drawable/bg_input_white" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:id="@+id/editScan" /><Button android:focusable="false" android:textSize="@dimen/dp_35" android:textColor="@android:color/white" android:background="@drawable/selector_button_orange" android:text="@string/ButtonCancel" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/btnCancelDialog3" /></LinearLayout></LinearLayout></ViewFlipper></LinearLayout>